--- a/template/index.html
+++ b/template/index.html
@@ -34,7 +34,7 @@
   <body>
     <script>
     // similar behavior as an HTTP redirect
-    window.location.replace("app/index.html");
+    window.location.replace("template/app/login.php");
     </script>
   </body>
 </html>
